--- a/practice.html
+++ b/practice.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <title>Anna Dowlin</title>
+  <title>BMS Family Health Center</title>
   <style>
     body {
       text-align: center;
@@ -26,9 +26,9 @@
   </style>
 </head>
 <body>
-  <img src="http://dash.ga.co/assets/anna.png">
-  <h1>Anna Dowlin</h1>
-  <p>Hi! I'm Anna, a NYC-based marketer. Say hello!</p>
+  <img src="http://static.wixstatic.com/media/c90225_1dad685abd2846d8bb94db8bf503ef29.jpg>
+  <h1>BMS Family Health & Wellness Centers</h1>
+  <p>A Subsidary Of The Brownsville Community Development Corporation</p>
   <input type="email" placeholder="Your email">
   <input type="submit">
 </body>
